Completely redid how the extensions are used. All extension code is now compiled *with* the main executable and not loaded dynamically. This avoids the error: munmap_chunk(): invalid pointer

--- a/ext/scattering/Makefile
+++ b/ext/scattering/Makefile
@@ -31,7 +31,7 @@ WRAPPER_FLAGS = -fno-strict-aliasing
 CXXFLAGS += -fPIC -std=c++11
 
 # Scattering shared library
-scattering_lib = scattering.so
+scattering_lib = libscattering.so
 
 #========rules=========================
 compile: $(OBJS_WRAP) $(OBJS) $(INC)
